# dnlp2025

./: .gitignore  README.md  main.py  pyproject.toml
doc/: glossary.md
doc/meetings/: 20250609.md
glove_embeddings/: .gitignore
src/: config.py  develop.ipynb  glove.py  model.py  predictions.json  preprocess.py  squad.py  train.ipynb
