[project]
name = "dnlp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "numpy>=2.2.6",
    "requests>=2.32.4",
    "stanza>=1.10.1",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
