[project]
name = "dnlp2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "numpy>=2.1.2",
    "requests>=2.32.4",
    "stanza>=1.10.1",
    "torch==2.5.1",
    "tqdm>=4.67.1",
]
